- Add IdempotencyStore for idempotent booking requests - Improve CabStore with synchronized cab reservation - Refactor GenericStore and StoreFactory - Update BookingService with thread-safe operations